# beta-reduction

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
.github/composite-actions/download-libraries/: action.yml
.github/composite-actions/download-library/: action.yml
.github/workflows/: check_codestyle.yml  run_tests.yml
cfg/: logging.conf
cli/: CMakeLists.txt  cli.cpp  cli.h  names.h  option_descriptions.h  option_names.h  strategy_option.h
src/: CMakeLists.txt
src/config/: easylogging++_config.h  misc.h  names.h  regex_helper_classes.h  regular_expressions.h
src/exceptions/: fatal_error.h  invalid_brackets_error.h  macro_parsing_error.h  parsing_error.h
src/model/: abstraction.h  application.h  reduction_result.h  string_term.cpp  string_term.h  term.h  term_info.h  terms.h  variable.h
src/model/enums/: brackets_problems.h  reduction_exit_status.h  reduction_strategies.h  strategy_states.h  term_types.h
src/parser/: parser.h  string_term.cpp  string_term.h
src/postprocessor/: all_macros.h  postprocessor.cpp  postprocessor.h
src/postprocessor/macros/: reverse_church_numeral.h
src/preprocessor/: all_known_terms.h  all_macros.h  i_known_term.h  i_macro.h  preprocessor.cpp  preprocessor.h
src/preprocessor/known_terms/: fixed_string_known_term.h  fixed_strings.h
src/preprocessor/macros/: binary_operator_macro.h  church_numeral.h  fixed_search_term_capturing_macro.h  fixed_string_macro.h  fixed_strings.h  operators.h  regex_with_generation_macro.h  simple_boolean_operations.h  unary_operator_macro.h
src/reducer/: dfs.cpp  dfs.h  reducer.cpp  reducer.h  term_info.h
src/strategy/: appl_strategy.cpp  appl_strategy.h  cbn_strategy.cpp  cbn_strategy.h  cbv_strategy.cpp  cbv_strategy.h  i_strategy.h  no_strategy.cpp  no_strategy.h  reducer.cpp  reducer.h  strategies.cpp  strategies.h  term_info.h
src/util/: bfs.cpp  bfs.h  dfs.cpp  dfs.h
tests/: CMakeLists.txt  main.cpp  sample_terms.h  test_parser.cpp  test_postprocessor.cpp  test_preprocessor.cpp  test_reducer.cpp
